force-app/main/default/objects/Deployment_Status__c/Deployment_Status__c.object-meta.xml
<CustomObject>
    <label>Deployment Status</label>
    <nameField>
        <label>Deployment  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>