force-app/main/default/objects/Deployment_Status__c/fields/Application_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Application_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Inventory</label>
    <referenceTo>Application_Inventory__c</referenceTo>
    <relationshipLabel>Deployment Status</relationshipLabel>
    <relationshipName>Deployment_Status</relationshipName>
    <type>Lookup</type>
</CustomField>